--- a/style.css
+++ b/style.css
@@ -1,42 +1,131 @@
+* {
+
+    box-sizing: border-box;
+    line-height: 200%;
+    letter-spacing: 0.5px;
+
+}
+
 html, body {
 
     box-sizing: border-box;
-    line-height: 1.5;
+    /*line-height: 100%;*/
     font-family: 'Roboto', sans-serif;
-    font-size: 1em;
+    color: #bbbbbb;
+
+}
+
+body {
+
+    position: relative;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    padding: 0;
+    background-color: #000;
 
 }
 
 .container {
 
-    max-width: 732px;
-    margin: 60px auto;
+    position: relative;
+    width: 100%;
+    max-width: 762px;
+    margin: 0 auto;
+    padding: 100px 15px 50px;
 
 }
 
 h1 {
 
-    font-style: italic;
-    font-size: 2em;
+    width: 100%;
+    /*height: 54px;*/
+    margin: 0 auto;
+    font-size: 35px;
+    text-align: center;
+    font-weight: 500;
+    letter-spacing: 5px;
+    color: #eeeeee;
 
 }
 
-h2, h3 {
+h1:nth-of-type(2) {
 
-    margin-bottom: 5px;
+    margin-bottom: 33px;
+
+}
+
+h2 {
+
+    width: 100%;
+    /*height: 26px;*/
+    margin: 0 auto 7px;
+    font-weight: 500;
+    font-size: 18px;
+    /*line-height: 21px;*/
+    letter-spacing: 1px;
+    color: #eeeeee;
+
+}
+
+h3 {
+
+    width: 100%;
     margin-top: 30px;
-    font-size: 1.1em;
+    font-size: 18px;
+    /*line-height: 160%;*/
+    font-weight: 500;
+    letter-spacing: 1px;
 
 }
 
 p {
 
-    margin-top: 0;
+    width: 100%;
+    margin: 0 auto;
+    /*line-height: 28px;*/
+    font-size: 16px;
 
 }
 
+b {
+
+    font-weight: 600;
+    color: #eeeeee;
+
+}
+
+.text {
+
+    padding-left: 19px;
+    margin-bottom: 20px;
+
+}
+
+.head-p {
+
+    font-size: 16px;
+    /*line-height: 21px;*/
+
+}
+
+.head-p p:first-of-type {
+
+    margin-top: 43px;
+    margin-bottom: 14px;
+
+}
+
+.head-p p:nth-of-type(2) {
+
+    margin-bottom: 33px;
+
+}
+
+p br:first-of-type {
+    display: none;
+}
+
 strong {
-
-    font-style: italic;
-
+    font-weight: 500;
 }
