corrected bp margins

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -51,8 +51,8 @@ html, body {
     margin-bottom: 40px;
 }
 
-.m-b-80 {
-    margin-bottom: 80px;
+.m-bp {
+    margin-bottom: 164px;
 }
 
 .m-b-200 {
