--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -59,18 +59,18 @@ hfooter {
         left: 0;
         right: 0;
         bottom: 0;
-        background-position: -12px bottom;
+        background-position: 0 bottom;
         background-repeat: no-repeat;
-        background-size: 101%;
+        background-size: contain;
         background-image: url('../images/manifesto.png');
     }
 }
 
 .logo-bottom {
     width: 100%;
-    max-width: 420px;
+    max-width: 200px;
     height: 100px;
-    background-position: -12px center;
+    background-position: 0 center;
     background-repeat: no-repeat;
     background-size: contain;
     background-image: url('../images/manifesto-bottom.png'); 
@@ -80,10 +80,14 @@ hfooter {
 h2 {
     font-size: 2em;
     padding-bottom: 18px;
-    font-weight: $font-weight-light;
+    font-weight: $font-weight-heavy;
+
+    .anchor {
+        margin-left: -56px;
+    }
 
     &.with-comment {
-        padding-bottom: 10px;
+        padding-bottom: 10px;        
     }
 }
 
@@ -136,13 +140,14 @@ ul {
 
 .sign-via-keybase {
     display: inline-block;
-    border-radius: 4px;
-    background-color: #ff0000;
-    box-shadow: 0 -0.5px 0.5px -0.5px rgba(255, 255, 255, 0.49);
-    padding: 20px 62px 20px 62px;
+    margin-top: 80px;
+    border-radius: 6px;
+    background-color: black;
+    border: 0.5px solid white;
+    padding: 4px 32px 4px 32px;
     text-align: center;
     color: white;
-    font-size: 1.7em;
+    font-size: 1.2em;
     text-decoration: none;
 }
 
@@ -188,6 +193,12 @@ intro {
 comment {
     display: block;
     box-sizing: border-box;
+
+    &.white {
+        color: white;
+        font-weight: $font-weight-heavy;
+        font-size: 1.5em;
+    }
     
     p {
         font-size: 1.2em;
@@ -200,12 +211,12 @@ comment {
         position: relative;
         margin-top: 50px;
         margin-bottom: 84px;
-        
+                
         &::before {
             position: absolute;
             content: '';
             top: -32px;
-            left: -124px;
+            left: -32px;
             right: -32px;
             bottom: -32px;
             background-color: rgba(105, 105, 105, 0.3);
@@ -215,6 +226,42 @@ comment {
         p {
             color: #45d492 !important;
             margin-bottom: 12px;
+            font-size: 1.2em !important;
+            font-weight: $font-weight-light !important;
+        }
+
+        .clip, .clip-complex1 {
+            display: block;
+            float: right;
+            position: relative; 
+            width: 32px;
+            height: 32px;
+            top: -30px;
+            right: -29px;           
+            border: none;
+            background-color: rgba(105, 105, 105, 0);
+
+            icon {
+                display: block;
+                width: 28px;
+                height: 28px;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: contain;
+                background-image: url('../images/clip.svg');
+                opacity: 0.1;
+            }
+
+            &:focus {
+                outline: none;
+            }
+
+            &:active {
+
+                icon {
+                    opacity: 0.4;
+                }
+            }
         }
     }
 }
@@ -224,7 +271,18 @@ comment {
     comment {
         p {
             color: white;
+            font-weight: $font-weight-heavy;
             font-size: 1.23em;
+
+            a {
+                font-weight: $font-weight-heavy;
+            }
+
+            .anchor {
+                display: inline-block;
+                margin-left: -72px;
+                width: 60px;
+            }
         }
     }
 }
@@ -238,10 +296,15 @@ fr {
 }
 
 .social {
+    margin-left: -64px;
 
     div {
         font-size: 1.2em;
         margin-bottom: 10px;
+    }
+
+    .link {
+        text-decoration: underline;
     }
 
     icon {
@@ -258,6 +321,7 @@ fr {
     }
 
     .keybase {
+        display: inline;
         
         icon {
             background-image: url('../images/keybase.svg');
@@ -265,9 +329,13 @@ fr {
     }
 
     .twitter {
+        display: inline;
+        margin-left: 20px;
         
         icon {
             background-image: url('../images/twitter.svg');
+            width: 27px;
+            height: 27px;
         }
     }
 }
