--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -45,6 +45,7 @@ hfooter {
 }
 
 .logo {
+    display: block;
     box-sizing: border-box;
     width: 100%;
     height: 120px;
@@ -97,6 +98,13 @@ h1 {
     font-size: 3.5em;
     padding-bottom: 64px;
     font-weight: $font-weight-light;
+
+    &.title {
+        color: #ff0000;
+        font-size: 3.75em;
+        padding-top: 100px;
+        padding-bottom: 10px;
+    }
 
     &.hash {
         font-size: 2.2em;
