--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -103,7 +103,8 @@ h1 {
         color: #ff0000;
         font-size: 3.75em;
         padding-top: 100px;
-        padding-bottom: 10px;
+        padding-bottom: 30px;
+        line-height: 1;
     }
 
     &.hash {
